# intel-image-classification

./: .dmypy.json  .gitignore  README.md  environment.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  testfile.py  train_imgs.hdf5
configs/: default_train_config.toml
core/dev_tests/scripts/: test_script.py
core/dl_framework/: __init__.py  callbacks.py  data.py  framework.py  learner.py  loss_functions.py  model.py  utils.py
core/dl_training/scripts/: store_files.py  training.py
examples/: example_01.ipynb  example_01.py  template_project.ipynb  test.ipynb  test.py
examples/.ipynb_checkpoints/: template_project-checkpoint.ipynb
