[metadata]
name = template-project
version = 0.1.0

[options]
package_dir=
        = core
packages = find:
#install_requires= 
#    toml
#    click
#    numpy
#    pandas
#    tqdm
#    torch
#    torchvision
#    matplotlib
#    tqdm
#    sklearn
#    datetime 
#    plotly
#    tensorboard
#    fastparquet
#    kaggle
#    mypy
#    nb_mypy

[options.packages.find]
where = core

[options.entry_points]
console_scripts= 
        training = core.dl_training.scripts.training:main
        devtest = core.dev_tests.scripts.test_script:main

[egg_info]
egg_base = .
